--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+    "test:coverage": "cross-env CI=true npm test -- --env=jsdom --coverage",
+    "upload:test-report": "./node_modules/.bin/codecov",
+    "netlify:deploy": "netlify deploy --dir=./build -p -m \"$(git log -1 --pretty=%B)\""
   },
   "eslintConfig": {
     "extends": [
